...
  };

  final Map<ProfileAttribute, String> profileAttributeLabels = {
    ProfileAttribute.profile: 'Profile',
    ProfileAttribute.projects: 'Projects',
    ProfileAttribute.workExperience: 'Work Experience',
    ProfileAttribute.certDegrees: 'Certificates & Degrees',
    ProfileAttribute.skillsStrengths: 'Skills & Strengths',
    ProfileAttribute.personalStories: 'Personal Stories',
    ProfileAttribute.volunteeringWork: 'Volunteering Work',
  };
  // void toggleProfileAttributes(ProfileAttribute key) {
  //   setState(() {
...
