...
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(20),
                ),
                textStyle: TextStyle(fontWeight: FontWeight.bold, fontSize: 16),
              ),
              child: Text(
                'Add new certificate/degree!',
                style: TextStyle(
                  color: Colors.black,
                  fontWeight: FontWeight.bold,
                ),
              ),
            ),
...
