...
                ),
                textStyle: const TextStyle(
                  fontWeight: FontWeight.bold,
                  fontSize: 16,
                ),
              ),
              child: const Text("Add new skill/strength!",
                  style: TextStyle(
                  color: Colors.black,
                  fontWeight: FontWeight.bold,
                  ),),
            ),
          ),
...
